Not ideal fix for navbar rendering off screen.

--- a/front-end/src/components/Navigation/topBar.css
+++ b/front-end/src/components/Navigation/topBar.css
@@ -2,6 +2,7 @@
     font-family: 'Snell Bold'
 }
 .overall{
+    margin-top: 340px;
     height: 90px;
     width: 100%;
     background-color:white;
@@ -12,8 +13,8 @@
     position:fixed;
     z-index: 1000;
     /* margin-top: -5px; */
-    padding-top: 0%;
-    top:0;
+    /* padding-top: 0%; */
+    /* top:0; */
 }
 
 .navSections {
